# NexusShell_CLIprototype

./: CMakeLists.txt  README.md  build.sh  package-lock.json  package.json
src/: index.js
src/commands/: dev-commands.js  file-commands.js  index.js  network-commands.js  process-commands.js  system-commands.js
src/core/: command-engine.js  execution-recorder.js  object-bridge.js  performance-monitor.js  repl.js  security-context.js  shell.js
src/cpp/: main.cpp
src/cpp/core/: nexus_kernel.cpp  nova_terminal_ui.cpp  orion_execution_engine.cpp  quantum_parser.cpp  stellar_object_bridge.cpp
src/cpp/include/: memory_manager.h  nexus_kernel.h  nexus_types.h  nova_terminal_ui.h  orion_execution_engine.h  quantum_parser.h  security_context.h  stellar_object_bridge.h  thread_pool.h
src/js/: nexus-runtime.js
src/js/examples/: pipeline-examples.js
src/plugins/: example-plugin.js  index.js  utils-plugin.js
src/test/: runner.js
